remove unnecessary directory; attempt to fix image stretching on mobile

--- a/src/styles/portfolio.scss
+++ b/src/styles/portfolio.scss
@@ -19,7 +19,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	height: auto;
+	// height: auto;
 	padding: 0;
 	background-color: $card-background;
 	border-radius: $b-radius;
